Test and analysis adjustments

--- a/.env
+++ b/.env
@@ -3,3 +3,11 @@ PORT_KEYCLOAK=8080
 POSTGRESQL_USER=keycloak
 POSTGRESQL_PASS=keycloak
 POSTGRESQL_DB=keycloak
+KC_ORIGIN=http://localhost:2380
+KC_CLIENT=bank-app
+KC_SECRET=rifb7zJJzE2RKStq74pEPMg29W5GkyIC
+KC_USER=banp-app-user
+KC_PASS=bankappuserpass
+GW_ORIGIN=http://localhost:9080
+GW_SERVICE_HOST=grandioso-himalayan.gateway.bank
+GW_SERVICE_PATH=/anything/of-foo
