--- a/tools/routes-1000.yaml
+++ b/tools/routes-1000.yaml
@@ -23,6 +23,9 @@ global_rules:
       ssl_verify: false
       tenant_id: fake
       timeout: 3000
+    prometheus:
+      _meta:
+        disable: false
 services:
 - name: presto-birman-service
   hosts:
