Added kong, fluent-bit, ...

--- a/services/prometheus/prometheus.yml
+++ b/services/prometheus/prometheus.yml
@@ -30,11 +30,16 @@ scrape_configs:
   # The job name is added as a label `job=<job_name>` to any timeseries scraped from this config.
   - job_name: "prometheus"
     # Override the global default and scrape targets from this job every 5 seconds.
-    scrape_interval: 5s
+    scrape_interval: 15s
     static_configs:
       - targets: ["localhost:9090"]
-  - job_name: "apisix"
-    scrape_interval: 5s
+  - job_name: "apisix-metrics"
+    scrape_interval: 15s
     metrics_path: "/apisix/prometheus/metrics"
     static_configs:
       - targets: ["gateway:9091"]
+  - job_name: "kong-metrics"
+    scrape_interval: 15s
+    metrics_path: "/metrics"
+    static_configs:
+      - targets: ["kong-gateway:8001"]
