--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -2,6 +2,7 @@ version: '3.4'
 
 services:
   keycloak:
+    profiles: [ "idp" ]
     platform: linux/x86_64
     build: 
       context: services/keycloak
@@ -17,7 +18,22 @@ services:
       - "2380:2380"
     networks:
       - ax
+
+  apisix-gateway:
+    profiles: [ "apisix-standalone" ]
+    platform: linux/x86_64
+    build:
+      context: services/apisix-gateway
+    ports:
+      - 9081:9080
+    depends_on:
+      grafana-loki:
+        condition: service_healthy
+    networks:
+      - ax
+
   gateway-db:
+    profiles: [ "apisix" ]
     image: bitnami/etcd:3.5.7
     environment:
       - ALLOW_NONE_AUTHENTICATION=yes
@@ -29,7 +45,9 @@ services:
       retries: 6
     networks:
       - ax
+
   gateway:
+    profiles: [ "apisix" ]
     platform: linux/x86_64
     build:
       context: services/gateway
@@ -56,7 +74,9 @@ services:
       retries: 30
     networks:
       - ax
+
   gateway-dashboard:
+    profiles: [ "apisix" ]
     platform: linux/x86_64
     build:
       context: services/gateway-dashboard
@@ -67,20 +87,18 @@ services:
         condition: service_healthy
     networks:
       - ax
+
   httpgobin:
+    profiles: [ "apisix", "apisix-standalone", "kong", "kong-standalone" ]
     build:
       context: services/microservice
     ports:
       - 3380:8080
     networks:
       - ax
-  httpbin:
-    image: kennethreitz/httpbin
-    ports:
-      - 2280:80
-    networks:
-      - ax
+
   grafana:
+    profiles: [ "monitoring", "logging" ]
     build: 
       context: services/grafana
     ports:
@@ -90,7 +108,9 @@ services:
         condition: service_healthy
     networks:
       - ax
+
   grafana-loki:
+    profiles: [ "monitoring", "logging" ]
     build: 
       context: services/grafana-loki
     ports:
@@ -102,7 +122,9 @@ services:
       retries: 6
     networks:
       - ax
+
   prometheus:
+    profiles: [ "monitoring", "logging" ]
     build:
       context: services/prometheus
     depends_on:
@@ -110,6 +132,63 @@ services:
         condition: service_healthy
     networks:
       - ax
+
+  # kong-db:
+  #   image: postgres:9.5
+  #   profiles: [ "kong" ]
+  #   environment:
+  #     POSTGRES_DB: ${KONG_PG_DATABASE:-kong}
+  #     POSTGRES_USER: ${KONG_PG_USER:-kong}
+  #     POSTGRES_PASSWORD: ${KONG_PG_PASS:-kong}
+  #   healthcheck:
+  #     test:
+  #       ["CMD", "pg_isready", "-d", "${KONG_PG_DATABASE:-kong}", "-U", "${KONG_PG_USER:-kong}"]
+  #     interval: 30s
+  #     timeout: 30s
+  #     retries: 3
+  #   networks:
+  #     - ax
+
+  kong-gateway:
+    profiles: [ "kong-standalone" ]
+    build:
+      context: services/kong-gateway
+    environment:
+      KONG_DATABASE: off
+      KONG_ADMIN_ACCESS_LOG: /dev/stdout
+      KONG_ADMIN_ERROR_LOG: /dev/stderr
+      KONG_PROXY_LISTEN: "0.0.0.0:8000"
+      KONG_ADMIN_LISTEN: "0.0.0.0:8001"
+      KONG_ADMIN_GUI_LISTEN: "0.0.0.0:8002"
+      KONG_PROXY_ACCESS_LOG: /dev/stdout
+      KONG_PROXY_ERROR_LOG: /dev/stderr
+      KONG_DECLARATIVE_CONFIG: "/opt/kong/kong.yaml"
+    ports:
+      - 8000:8000
+      - 8001:8001
+      - 8002:8002
+    healthcheck:
+      test: [ "CMD", "kong", "health" ]
+      interval: 10s
+      timeout: 10s
+      retries: 10
+    networks:
+      - ax
+    
+  apisix-etl:
+    profiles: [ "apisix", "apisix-standalone" ]
+    build:
+      context: services/apisix-etl
+    networks:
+      - ax
+
+  kong-etl:
+    profiles: [ "kong-standalone" ]
+    build:
+      context: services/kong-etl
+    networks:
+      - ax
+
 networks:
   ax:
     driver: bridge
