--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -133,21 +133,55 @@ services:
     networks:
       - ax
 
-  # kong-db:
-  #   image: postgres:9.5
-  #   profiles: [ "kong" ]
-  #   environment:
-  #     POSTGRES_DB: ${KONG_PG_DATABASE:-kong}
-  #     POSTGRES_USER: ${KONG_PG_USER:-kong}
-  #     POSTGRES_PASSWORD: ${KONG_PG_PASS:-kong}
-  #   healthcheck:
-  #     test:
-  #       ["CMD", "pg_isready", "-d", "${KONG_PG_DATABASE:-kong}", "-U", "${KONG_PG_USER:-kong}"]
-  #     interval: 30s
-  #     timeout: 30s
-  #     retries: 3
-  #   networks:
-  #     - ax
+  kong-db:
+    image: postgres:9.5
+    profiles: [ "kong-decoupled" ]
+    environment:
+      POSTGRES_DB: kong
+      POSTGRES_USER: kong
+      POSTGRES_PASSWORD: kong
+    healthcheck:
+      test:
+        ["CMD", "pg_isready", "-d", "kong", "-U", "kong"]
+      interval: 30s
+      timeout: 30s
+      retries: 3
+    networks:
+      - ax
+
+  kong-migrations:
+    image: kong:3.5.0
+    command: kong migrations bootstrap
+    profiles: [ "kong-decoupled" ]
+    depends_on:
+      kong-db:
+        condition: service_healthy
+    environment:
+      KONG_DATABASE: postgres
+      KONG_PG_DATABASE: kong
+      KONG_PG_HOST: kong-db
+      KONG_PG_USER: kong
+      KONG_PG_PASSWORD: kong
+    networks:
+      - ax
+    restart: on-failure
+
+  kong-migrations-up:
+    image: kong:3.5.0
+    command: kong migrations up && kong migrations finish
+    profiles: [ "kong-decoupled" ]
+    depends_on:
+      kong-db:
+        condition: service_healthy
+    environment:
+      KONG_DATABASE: postgres
+      KONG_PG_DATABASE: kong
+      KONG_PG_HOST: kong-db
+      KONG_PG_USER: kong
+      KONG_PG_PASSWORD: kong
+    networks:
+      - ax
+    restart: on-failure
 
   kong-gateway:
     profiles: [ "kong-standalone" ]
