kong decoupled setup

--- a/services/kong-gateway/Dockerfile
+++ b/services/kong-gateway/Dockerfile
@@ -7,5 +7,7 @@ RUN apt update && \
     tar -xf deck.tar.gz -C /tmp && \
     mv /tmp/deck /usr/local/bin/
 
+COPY docker-entrypoint.sh /docker-entrypoint.sh
+
 USER kong
 COPY kong.yaml /opt/kong/kong.yaml
