--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -183,6 +183,39 @@ services:
       - ax
     restart: on-failure
 
+  kong-gateway-decoupled:
+    profiles: [ "kong-decoupled" ]
+    build:
+      context: services/kong-gateway
+    depends_on:
+      kong-db:
+        condition: service_healthy
+    environment:
+      KONG_DATABASE: postgres
+      KONG_PG_DATABASE: kong
+      KONG_PG_HOST: kong-db
+      KONG_PG_USER: kong
+      KONG_PG_PASSWORD: kong
+      KONG_ADMIN_ACCESS_LOG: /dev/stdout
+      KONG_ADMIN_ERROR_LOG: /dev/stderr
+      KONG_PROXY_LISTEN: "0.0.0.0:8100"
+      KONG_ADMIN_LISTEN: "0.0.0.0:8101"
+      KONG_ADMIN_GUI_LISTEN: "0.0.0.0:8102"
+      KONG_PROXY_ACCESS_LOG: /dev/stdout
+      KONG_PROXY_ERROR_LOG: /dev/stderr
+      DECK_KONG_ADDR: http://localhost:8101
+    ports:
+      - 8100:8100
+      - 8101:8101
+      - 8102:8102
+    healthcheck:
+      test: [ "CMD", "kong", "health" ]
+      interval: 10s
+      timeout: 10s
+      retries: 10
+    networks:
+      - ax
+
   kong-gateway:
     profiles: [ "kong-standalone" ]
     build:
