externalized configuration of addresses

--- a/services/apisix-dashboard/Dockerfile
+++ b/services/apisix-dashboard/Dockerfile
@@ -1,3 +1,6 @@
 FROM apache/apisix-dashboard:3.0.1-alpine
 COPY --chown=apisix:apisix conf.yaml /usr/local/apisix-dashboard/conf/conf.yaml
 COPY --chown=apisix:apisix schema.json /usr/local/apisix-dashboard/conf/schema.json
+COPY --chown=apisix:apisix docker-entrypoint.sh /docker-entrypoint.sh
+
+ENTRYPOINT [ "/docker-entrypoint.sh" ]
