--- a/services/apisix-etl/apisix.conf
+++ b/services/apisix-etl/apisix.conf
@@ -15,5 +15,5 @@
 [OUTPUT]
     Name        loki
     Match       apisix.*
-    Host        grafana-loki
+    Host        ${LOKI_HOST}
     Labels      job=apisix-logs
