--- a/services/httpster/Dockerfile
+++ b/services/httpster/Dockerfile
@@ -1,8 +1,13 @@
 FROM golang:1.21.4
 
+# httpster
 WORKDIR /app
 COPY code/ /app/
-RUN go mod download
-RUN make build
+RUN go mod download && \
+    make build
+
+# apache benchmark & wrk
+RUN apt update && \
+    apt install -y wrk apache2-utils
 
 ENTRYPOINT [ "/app/bin/httpster" ]
