--- a/services/kong-etl/kong.conf
+++ b/services/kong-etl/kong.conf
@@ -15,5 +15,5 @@
 [OUTPUT]
     Name        loki
     Match       kong.*
-    Host        grafana-loki
+    Host        ${LOKI_HOST}
     Labels      job=kong-logs
