--- a/.env
+++ b/.env
@@ -1,13 +1,24 @@
-KEYCLOAK_VERSION=13.0.0
-PORT_KEYCLOAK=8080
-POSTGRESQL_USER=keycloak
-POSTGRESQL_PASS=keycloak
-POSTGRESQL_DB=keycloak
-KC_ORIGIN=http://localhost:2380
-KC_CLIENT=bank-app
-KC_SECRET=rifb7zJJzE2RKStq74pEPMg29W5GkyIC
-KC_USER=banp-app-user
-KC_PASS=bankappuserpass
-GW_ORIGIN=http://localhost:9080
-GW_SERVICE_HOST=grandioso-himalayan.gateway.bank
-GW_SERVICE_PATH=/anything/of-foo
+GW_A6SA_HOST=apisix-gateway
+GW_A6SA_PORT=9080
+GW_A6SA_ORIGIN=http://apisix-gateway:9080
+
+DB_A6DC_HOST=apisix-db
+DB_A6DC_PORT=2379
+DB_A6DC_ORIGIN=http://apisix-db:2379
+
+LOKI_HOST=grafana-loki
+
+UPSTREAM_HOST=httpgobin
+UPSTREAM_PORT=8080
+UPSTREAM_ORIGIN=http://httpgobin:8080
+
+KC_HOST=keycloak
+KC_PORT=2380
+KC_ORIGIN=http://keycloak:2380
+KC_CLIENT = 'bank-app'
+KC_SECRET = 'rifb7zJJzE2RKStq74pEPMg29W5GkyIC'
+KC_USER = 'bank-app-user'
+KC_PASS = 'bankappuserpass'
+
+ETL_A6_HOST=apisix-etl
+ETL_A6_PORT=1111
