--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -28,6 +28,12 @@ services:
     platform: linux/x86_64
     build:
       context: services/apisix-gateway-standalone
+    environment:
+      - APISIX_STAND_ALONE=true
+      - ETL_A6_HOST=${ETL_A6_HOST}
+      - ETL_A6_PORT=${ETL_A6_PORT}
+      - UPSTREAM_HOST=${UPSTREAM_HOST}
+      - UPSTREAM_PORT=${UPSTREAM_PORT}
     ports:
       - 9081:9080
     depends_on:
@@ -41,7 +47,7 @@ services:
     image: bitnami/etcd:3.5.7
     environment:
       - ALLOW_NONE_AUTHENTICATION=yes
-      - ETCD_ADVERTISE_CLIENT_URLS=http://apisix-db:2379
+      - ETCD_ADVERTISE_CLIENT_URLS=${DB_A6DC_ORIGIN}
     healthcheck:
       test: ["CMD", "etcdctl", "endpoint", "health"]
       interval: 5s
@@ -56,7 +62,11 @@ services:
     build:
       context: services/apisix-gateway-decoupled
     environment:
-      - APISIX_DEPLOYMENT_ETCD_HOST=["http://apisix-db:2379"]
+      - APISIX_DEPLOYMENT_ETCD_HOST=["${DB_A6DC_ORIGIN}"]
+      - ETL_A6_HOST=${ETL_A6_HOST}
+      - ETL_A6_PORT=${ETL_A6_PORT}
+      - UPSTREAM_HOST=${UPSTREAM_HOST}
+      - UPSTREAM_PORT=${UPSTREAM_PORT}
     ports:
       - 9080:9080
     depends_on:
@@ -78,7 +88,8 @@ services:
     build:
       context: services/apisix-dashboard
     environment:
-      - APISIX_DEPLOYMENT_ETCD_HOST=["http://apisix-db:2379"]
+      - DB_A6DC_HOST=${DB_A6DC_HOST}
+      - DB_A6DC_PORT=${DB_A6DC_PORT}
     ports:
       - 9000:9000
     depends_on:
@@ -91,6 +102,8 @@ services:
     profiles: [ "apisix-decoupled", "apisix-standalone" ]
     build:
       context: services/apisix-etl
+    environment:
+      - LOKI_HOST=${LOKI_HOST}
     networks:
       - ax
 
@@ -257,6 +270,8 @@ services:
     profiles: [ "kong-decoupled", "kong-standalone" ]
     build:
       context: services/kong-etl
+    environment:
+      - LOKI_HOST=${LOKI_HOST}
     networks:
       - ax
 
