--- a/services/apisix-gateway-standalone/Dockerfile
+++ b/services/apisix-gateway-standalone/Dockerfile
@@ -1,3 +1,3 @@
 FROM apache/apisix:3.8.0-debian
 COPY --chown=636:636 conf /usr/local/apisix/conf/
-
+COPY --chown=636:636 docker-entrypoint.sh /docker-entrypoint.sh
