--- a/.env
+++ b/.env
@@ -12,9 +12,9 @@ UPSTREAM_HOST=httpgobin
 UPSTREAM_PORT=8080
 UPSTREAM_ORIGIN=http://httpgobin:8080
 
-KC_HOST=keycloak
+KC_HOST=localhost
 KC_PORT=2380
-KC_ORIGIN=http://keycloak:2380
+KC_ORIGIN=http://localhost:2380
 KC_CLIENT = 'bank-app'
 KC_SECRET = 'rifb7zJJzE2RKStq74pEPMg29W5GkyIC'
 KC_USER = 'bank-app-user'
@@ -22,3 +22,6 @@ KC_PASS = 'bankappuserpass'
 
 ETL_A6_HOST=apisix-etl
 ETL_A6_PORT=1111
+
+ETL_KG_HOST=kong-etl
+ETL_KG_PORT=1111
