externalized prometheus config

--- a/.env
+++ b/.env
@@ -1,6 +1,22 @@
 GW_A6SA_HOST=apisix-gateway
 GW_A6SA_PORT=9080
+GW_A6SA_METRICS_PORT=9091
 GW_A6SA_ORIGIN=http://apisix-gateway:9080
+
+GW_A6DC_HOST=apisix-gateway-decoupled
+GW_A6DC_PORT=9080
+GW_A6DC_METRICS_PORT=9091
+GW_A6DC_ORIGIN=http://apisix-gateway-decoupled:9080
+
+GW_KGSA_HOST=kong-gateway
+GW_KGSA_PORT=8000
+GW_KGSA_METRICS_PORT=8001
+GW_KGSA_ORIGIN=http://kong-gateway:8000
+
+GW_KGDC_HOST=kong-gateway-decoupled
+GW_KGDC_PORT=8000
+GW_KGDC_METRICS_PORT=8001
+GW_KGDC_ORIGIN=http://kong-gateway-decoupled:8000
 
 DB_A6DC_HOST=apisix-db
 DB_A6DC_PORT=2379
