--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -150,6 +150,15 @@ services:
     profiles: [ "apisix-decoupled", "apisix-standalone", "kong-decoupled", "kong-standalone" ]
     build:
       context: services/prometheus
+    environment:
+      - GW_A6SA_HOST=${GW_A6SA_HOST}
+      - GW_A6SA_METRICS_PORT=${GW_A6SA_METRICS_PORT}
+      - GW_A6DC_HOST=${GW_A6DC_HOST}
+      - GW_A6DC_METRICS_PORT=${GW_A6DC_METRICS_PORT}
+      - GW_KGSA_HOST=${GW_KGSA_HOST}
+      - GW_KGSA_METRICS_PORT=${GW_KGSA_METRICS_PORT}
+      - GW_KGDC_HOST=${GW_KGDC_HOST}
+      - GW_KGDC_METRICS_PORT=${GW_KGDC_METRICS_PORT}
     networks:
       - ax
 
