--- a/services/prometheus/Dockerfile
+++ b/services/prometheus/Dockerfile
@@ -1,3 +1,7 @@
 FROM prom/prometheus:v2.25.0
 
-COPY prometheus.yml /etc/prometheus/prometheus.yml
+COPY --chown=nobody:nobody prometheus.yml /etc/prometheus/prometheus.yml
+COPY docker-entrypoint.sh /docker-entrypoint.sh
+
+ENTRYPOINT [ "/docker-entrypoint.sh" ]
+CMD [ "--config.file=/etc/prometheus/prometheus.yml", "--storage.tsdb.path=/prometheus", "--web.console.libraries=/usr/share/prometheus/console_libraries", "--web.console.templates=/usr/share/prometheus/consoles" ]
