--- a/services/prometheus/prometheus.yml
+++ b/services/prometheus/prometheus.yml
@@ -8,14 +8,19 @@ scrape_configs:
     scrape_interval: 15s
     metrics_path: "/apisix/prometheus/metrics"
     static_configs:
-      - targets: ["apisix-gateway:9091"]
+      - targets: ["${GW_A6SA_HOST}:${GW_A6SA_METRICS_PORT}"]
   - job_name: "apisix-gateway-decoupled-metrics"
     scrape_interval: 15s
     metrics_path: "/apisix/prometheus/metrics"
     static_configs:
-      - targets: ["apisix-gateway-decoupled:9091"]
+      - targets: ["${GW_A6DC_HOST}:${GW_A6DC_METRICS_PORT}"]
   - job_name: "kong-gateway-metrics"
     scrape_interval: 15s
     metrics_path: "/metrics"
     static_configs:
-      - targets: ["kong-gateway:8001"]
+      - targets: ["${GW_KGSA_HOST}:${GW_KGSA_METRICS_PORT}"]
+  - job_name: "kong-gateway-decoupled-metrics"
+    scrape_interval: 15s
+    metrics_path: "/metrics"
+    static_configs:
+      - targets: ["${GW_KGDC_HOST}:${GW_KGDC_METRICS_PORT}"]
