test-agent draft

--- a/.env
+++ b/.env
@@ -28,9 +28,9 @@ UPSTREAM_HOST=httpgobin
 UPSTREAM_PORT=8080
 UPSTREAM_ORIGIN=http://httpgobin:8080
 
-KC_HOST=localhost
+KC_HOST=keycloak
 KC_PORT=2380
-KC_ORIGIN=http://localhost:2380
+KC_ORIGIN=http://keycloak:2380
 KC_CLIENT = 'bank-app'
 KC_SECRET = 'rifb7zJJzE2RKStq74pEPMg29W5GkyIC'
 KC_USER = 'bank-app-user'
