Externalized Kong DB host

--- a/.env
+++ b/.env
@@ -22,6 +22,8 @@ DB_A6DC_HOST=apisix-db
 DB_A6DC_PORT=2379
 DB_A6DC_ORIGIN=http://apisix-db:2379
 
+DB_KGDC_HOST=kong-db
+
 LOKI_HOST=grafana-loki
 
 UPSTREAM_HOST=httpgobin
